# MatMem-Sim

./: .gitignore  CMakeLists.txt  README.md
examples/: gemm_workload.csv
plots/: plot_gantt.py  plot_results.py
results/: auto_sweep.csv  sweep.csv
scripts/: run_sweep.py  run_workload.py
src/: dram_model.cpp  dram_model.h  energy_model.cpp  energy_model.h  hardware_params.h  main.cpp  metrics.h  scratchpad.cpp  scratchpad.h  simulator.cpp  simulator.h  tiling_engine.h  tiling_strategies.cpp  tuner.cpp  tuner.h
tests/: test_cli_csv.py  test_dram.cpp  test_metrics.cpp  test_scratchpad.cpp  test_simulation.cpp  test_smoke.cpp  test_tuner.cpp  test_utils.h  test_workload.py
